--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -16,7 +16,7 @@ PyJWT==2.1.0
 # DATABASE
 # ==============================================================================
 dj-database-url==1.0.0
-# psycopg2==2.9.3  # Para PostgreSQL, comentamos por ahora
+psycopg2-binary==2.9.3  # Para PostgreSQL (binary para fácil instalación)
 
 # ==============================================================================
 # API DOCUMENTATION
@@ -27,8 +27,6 @@ drf-yasg==1.21.4
 # UTILITIES
 # ==============================================================================
 django-environ==0.4.5
-django-filter==22.1
-pillow==9.2.0
 python-decouple==3.6
 
 # ==============================================================================
@@ -41,7 +39,6 @@ python-decouple==3.6
 # ==============================================================================
 # DEPLOYMENT
 # ==============================================================================
-whitenoise==5.3.0
 gunicorn==20.1.0
 
 # ==============================================================================
